--- a/manual/configure_rockbox/file_view.tex
+++ b/manual/configure_rockbox/file_view.tex
@@ -4,23 +4,23 @@ The File View menu deals with options relating to how the File Browser
 displays files.
 %
 \begin{description}
-\item[Sort Case Sensitive:]
+\item[Sort Case Sensitive.]
   If this option is set to \setting{Yes}, all files that start with upper case 
   letters will be listed first, followed by all files that begin with lower 
   case letters.  If this option is set to NO, then case will be ignored when 
   sorting files.
-\item[Sort Directories:]
+\item[Sort Directories.]
   This option controls how Rockbox sorts directories.  The default is to sort 
   them alphabetically. \setting{By date} sorts them with the oldest directory first. 
   \setting{By newest date} sorts them with the newest directory first.
   
-\item[Sort Files:]
+\item[Sort Files.]
   This option controls how Rockbox sorts files.  All of the options for 
   \setting{Sort Directories} are available in this option.  In addition, there 
   is a \setting{By type} option which sorts files alphabetically by their type 
   (such as \fname{.mp3}) then alphabetically within each type.
 
-\item[Interpret numbers when sorting:]
+\item[Interpret numbers when sorting.]
   \setting{As whole numbers} enables a sorting algorithm which is similar to
   the default sorting of, for example, Windows Explorer, Mac OS X's Finder
   or Nautilus, with regards to numbers at the beginning or within filenames.
@@ -42,36 +42,36 @@ displays files.
   \end{table}
 
   
-\item[\label{ref:ShowFiles}Show Files:]
+\item[\label{ref:ShowFiles}Show Files.]
   This option controls which files are displayed in the File Browser.
   %
   \begin{description}
-  \item[All:] The \setting{File Browser} displays all files and directories.
+  \item[All.] The \setting{File Browser} displays all files and directories.
     Extensions are shown. No files or directories are hidden.
-  \item[Supported:] The \setting{File Browser} displays all directories and
+  \item[Supported.] The \setting{File Browser} displays all directories and
     files supported by Rockbox (see \reference{ref:Supportedfileformats}).
     Files and directories starting with \fname{.} (\emph{dot}) or with the 
     \emph{hidden} flag set are hidden.
-  \item[Music:] The \setting{File Browser} displays only directories, playlists and
+  \item[Music.] The \setting{File Browser} displays only directories, playlists and
     the supported \emph{audio} file formats. Extensions are stripped. Files and
     directories starting with \fname{.} or with the ``hidden'' flag set are
     hidden.
-  \item[Playlists:] The \setting{File Browser} displays only directories and playlists,
+  \item[Playlists.] The \setting{File Browser} displays only directories and playlists,
     for simplified navigation.
   \end{description}
 
-\item[\label{ref:ShowExtensions}Show Filename Extensions:]
+\item[\label{ref:ShowExtensions}Show Filename Extensions.]
   This option controls how file extensions are shown in the File Browser.
   %
   \begin{description}
-  \item[Off:] The file extensions are never shown.
-  \item[On:] The file extensions are always shown.
-  \item[Only unknown types:] Only the extensions of unknown filetypes are shown.
-  \item[Only when viewing all types:] Only show file extensions when
+  \item[Off.] The file extensions are never shown.
+  \item[On.] The file extensions are always shown.
+  \item[Only unknown types.] Only the extensions of unknown filetypes are shown.
+  \item[Only when viewing all types.] Only show file extensions when
       \setting{Show Files} is set to \setting{All}.
   \end{description}
   
-\item[Follow Playlist:] 
+\item[Follow Playlist.] 
   This option determines what directory the \setting{File Browser} displays
   first. If \setting{Follow Playlist} is set to \setting{Yes}, when you enter
   the \setting{File Browser} from the WPS, you will find yourself in the same
@@ -80,7 +80,7 @@ displays files.
   will find yourself in the directory you were in when you last left the
   \setting{File Browser}.
 
-\item[Show Path:]
+\item[Show Path.]
   If this setting is set to \setting{Full Path} the full path to the current
   directory will be displayed on the first line in the \setting{File Browser}.
   If set to \setting{Current Directory Only} only the name of the current
