--- a/manual/configure_rockbox/system_options.tex
+++ b/manual/configure_rockbox/system_options.tex
@@ -13,7 +13,7 @@
   Options relating to the \opt{archos}{batteries}\nopt{archos}{battery}
   in the \dap.
   \begin{description}
-    \item [Battery Capacity: ]This setting can be used to tell Rockbox what
+    \item [Battery Capacity.] This setting can be used to tell Rockbox what
       capacity (in mAh) the battery being used has. The default is
       \opt{player,recorder}{1500mAh}%
       \opt{recorderv2fm}{2200mAh}%
@@ -44,12 +44,12 @@
         determine battery life.}
 
       \opt{battery_types}{
-      \item [Battery Type: ]This setting tells Rockbox which type of battery
+      \item [Battery Type.] This setting tells Rockbox which type of battery
         is currently used in the \dap{}. The two supported battery types are
         ``Alkaline'' or ``NiMH''.}
 
       \opt{usb_charging}{
-      \item [Charge During USB Connection: ]This option lets you control whether
+      \item [Charge During USB Connection.] This option lets you control whether
         the \dap{} should charge during the USB connection and hence draw the
         full 500mA. Turning it \setting{Off} is recommended if the dap{} is
         connected through an unpowered USB hub or a laptop port.
@@ -63,7 +63,7 @@
 
   \begin{description}
     \opt{HAVE_DISK_STORAGE}{
-    \item [Disk Spindown: ]Rockbox has a timer that makes it spin down the
+    \item [Disk Spindown.] Rockbox has a timer that makes it spin down the
       hard disk after it is idle for a certain amount of time. This setting
       controls the amount of time between the last user activity and the time
       that the disk spins down. This idle time is only affected by user
@@ -73,7 +73,7 @@
     }
 
     \opt{dircache}{
-    \item [Directory Cache: ]Rockbox has the ability to cache the contents of
+    \item [Directory Cache.] Rockbox has the ability to cache the contents of
       your drive in RAM. The \setting{Directory Cache} takes a small amount of
       memory away from Rockbox that would otherwise be used to buffer music,
       but it speeds up navigation in the file browser by eliminating
@@ -102,14 +102,14 @@ available.
 \subsection{Limits}
 This sub menu relates to limits in the Rockbox operating system.
   \begin{description}
-    \item [Max Entries in File Browser: ]This setting controls the limit on
+    \item [Max Entries in File Browser.] This setting controls the limit on
     the number of files that you can put in any particular directory in the
     file browser. You can configure the size to be between 50 and
     10,000 files in steps of 50. The default is 400. Higher values will shorten
     the music buffer, so you should increase this setting \emph{only} if you have
     directories with a large number of files.
 
-    \item [Max Playlist Size: ]This setting controls the maximum size of
+    \item [Max Playlist Size.] This setting controls the maximum size of
     a playlist. The playlist size can be between 1,000 and 32,000 files,
     in steps of 1,000 (default is 10,000). Higher values will shorten the
     music buffer, so you should increase this setting \emph{only} if you
@@ -132,7 +132,7 @@ This sub menu relates to limits in the Rockbox operating system.
       This option turns \setting{On} and \setting{Off} the car ignition
       auto stop function.
   \begin{description}
-  \item [Car Adapter Mode: ]When using the \dap{} in a car,
+  \item [Car Adapter Mode.] When using the \dap{} in a car,
   \setting{Car Adapter Mode} automatically stops playback on the \dap{} when
   power (i.e. from cigarette lighter power adapter) to the external DC in jack
   is turned off. If the \setting{Car Adapter Mode} is set to \setting{On},
@@ -216,7 +216,7 @@ this option \setting{On}. If it is not required, then turning this setting
     The following modes are available:
     \begin{description}
 
-      \item [Multimedia: ]This mode lets you control the volume, playback, and
+      \item [Multimedia.] This mode lets you control the volume, playback, and
         skips tracks on the host computer. It is equivalent for the multimedia
         keys found on top of some multimedia keyboards.
         \begin{table}
@@ -284,7 +284,7 @@ this option \setting{On}. If it is not required, then turning this setting
           \end{btnmap}
         \end{table}
 
-      \item [Presentation: ]This mode lets you control a presentation program
+      \item [Presentation.] This mode lets you control a presentation program
         (e.g. OpenOffice Impress, and some other popular application), making
         the \dap{} a wired remote control device. This mode is can be useful
         for lecturers who does not have a wireless remote control for this
@@ -376,7 +376,7 @@ this option \setting{On}. If it is not required, then turning this setting
           \end{btnmap}
         \end{table}
 
-      \item [Browser: ]This mode lets you control a web browser (e.g. Firefox).
+      \item [Browser.] This mode lets you control a web browser (e.g. Firefox).
         It uses the \dap{}'s keys to navigate through the web page and
         different tabs, navigate through history, and to control zoom.
         \begin{table}
@@ -467,7 +467,7 @@ this option \setting{On}. If it is not required, then turning this setting
         \end{table}
 
       {\opt{usb_hid_mouse}{
-      \item [Mouse: ]This mode emulates a mouse. Features supported: Mouse
+      \item [Mouse.] This mode emulates a mouse. Features supported: Mouse
         movement; left and right button clicking; and dragging and dropping.
         \begin{table}
           \begin{btnmap}{}{}
