--- a/manual/configure_rockbox/theme_settings.tex
+++ b/manual/configure_rockbox/theme_settings.tex
@@ -80,35 +80,35 @@ customize the visual apperance of Rockbox.
   }
 
 \opt{lcd_non-mono}{%
-  \item[Clear Backdrop:]
+  \item[Clear Backdrop.]
     Rockbox allows you to select bitmap pictures to use as backdrops,
     see \reference{ref:LoadingBackdrops} for further information.
     This option allows you to clear the backdrops that you set.
 }
 %
   \opt{lcd_bitmap}{
-    \item[Status/Scrollbar:]
+    \item[Status/Scrollbar.]
       Settings related to on screen status display and the scrollbar.
       \begin{description}
-      \item[Scroll Bar:] Allows you to choose where the vertical scroll bar
+      \item[Scroll Bar.] Allows you to choose where the vertical scroll bar
         should appear.
-      \item[Scroll Bar Width:] Allows you to choose the width of the
+      \item[Scroll Bar Width.] Allows you to choose the width of the
         scroll bar (in pixels).  Default value is 6.
-      \item[Status Bar:] Allows you to choose where to display the 
+      \item[Status Bar.] Allows you to choose where to display the 
         statusbar\opt{remote}{ on the main display}. 
       \opt{remote}{
-        \item[Remote Status Bar:] Allows you to choose where to display the 
+        \item[Remote Status Bar.] Allows you to choose where to display the 
         statusbar on the remote display.
       }
       \opt{RECORDER_PAD}{
-       \item[Button Bar:] Enables or disables the button bar prompts for the
+       \item[Button Bar.] Enables or disables the button bar prompts for the
          ``F''-keys at the bottom of the screen.
       }
-      \item[Volume Display:] Controls whether the volume is displayed as a
+      \item[Volume Display.] Controls whether the volume is displayed as a
         graphic or a numeric value on the Status Bar. If you select a numeric
         display, volume is displayed in decibels.  See \reference{ref:volume}
         for more on the volume setting.
-      \item[Battery Display:] Controls whether the battery charge status is
+      \item[Battery Display.] Controls whether the battery charge status is
         displayed as a graphic or numerical percentage value on the Status Bar.
       \end{description}
     }
@@ -117,15 +117,15 @@ customize the visual apperance of Rockbox.
 \item[Line Selector Type.]
   This option allows you to select which type of line selector to use.
   \begin{description}
-    \item[Pointer:]
+    \item[Pointer.]
       A small arrow to the left of the menu text.
-    \item[Bar (inverse):]
+    \item[Bar (inverse).]
       A bar with inverted foreground and background colour.
 \opt{lcd_color}{
-    \item[Bar (Solid Colour):]
+    \item[Bar (Solid Colour).]
       A bar with a solid colour, the colour is set in the \setting{Colours}
       submenu.
-    \item[Bar (Gradient Colour):]
+    \item[Bar (Gradient Colour).]
       A bar with a colour gradient, the colours are set in the \setting{Colours}
       submenu.
 }
@@ -139,21 +139,21 @@ customize the visual apperance of Rockbox.
     \item[Line Selector Colours.]
       These options sets the colours for the line selector bars.
       \begin{description}
-        \item[Primary Colour:]
+        \item[Primary Colour.]
           Set the primary colour used for the gradient line selector bar and the
           colour used for the solid color line selector bar.
-        \item[Secondary Colour:]
+        \item[Secondary Colour.]
           Set the secondary colour used for the gradient line selector bar.
-        \item[Text Colour:]
+        \item[Text Colour.]
           Set the colour of the selected text when using the solid colour or the
           gradient colour line selection bars.
       \end{description}
 
-    \item[Background Colour:]
+    \item[Background Colour.]
       Sets the background colour for the display.
-    \item[Foreground Colour:]
+    \item[Foreground Colour.]
       Sets the colour used for text and icons.
-    \item[Reset Colours:]
+    \item[Reset Colours.]
       Resets the LCD display to Rockbox's default colours.
     \end{description}
 }% lcd_color
