--- a/manual/configure_rockbox/recording_settings.tex
+++ b/manual/configure_rockbox/recording_settings.tex
@@ -99,24 +99,24 @@
   is only the time required to stop and restart the recording, on the order of
   2 -- 4 seconds.
   \begin{description}
-    \item[Split Measure:]
+    \item[Split Measure.]
       This option controls wether to split the recording when the
       \setting{Split Filesize} is reached or when the
       \setting{Split Time} has elapsed.
 
-    \item[What to do when Splitting:]
+    \item[What to do when Splitting.]
       This controls what will happend when the splitting condition is
       fullfilled the two available options here are
       \setting{Start a new file} or \setting{Stop recording}.
 
-    \item[Split Time:]
+    \item[Split Time.]
       Set the time to record between each split, if time is used as
       \setting{Split Measure}.\\
       Options (hours:minutes between splits): Off, 00:05, 00:10, 00:15, 00:30,
       1:00, 1:14 (74 minute  CD), 1:20 (80 minute CD), 2:00, 4:00, 8:00, 10:00,
       12:00, 18:00, 24:00.
 
-    \item[Split Filesize:]
+    \item[Split Filesize.]
       Set the filesize to record between each split, if filesize is used as
       \setting{Split Measure}.
 
@@ -154,7 +154,7 @@
   the show to verify his amp is turned on. The trigger features numerous
   parameters to adapt its behaviour to the desired situation.
   \begin{description}
-  \item[Trigger]
+  \item[Trigger.]
 	This parameter specifies the trigger mode.  When set to \setting{Off}
 	the recording must be started manually and apart from the Prerecord time no
 	other parameter has any effect.  \setting{Once} will have the trigger start
@@ -162,11 +162,11 @@
 	not start another recording. \setting{Repeat} will have the trigger start 
 	multiple recordings.
 	
-  \item[Trigtype]
+  \item[Trigtype.]
     \fixme{Add description of Trigtype}
 	Options: \setting{Stop}, \setting{Pause}, \setting{New File}.
 	
-  \item[Prerecord Time]
+  \item[Prerecord Time.]
     This specifies the time that is included into the recording before the
 	trigger event occurs. This is very useful if you record a signal that fades
 	in. Usually you want to set the prerecord time >= start duration. That
@@ -174,7 +174,7 @@
 	time is not a special parameter of the trigger. It is available during normal
 	recordings too.  
 	
-  \item[Start Above]
+  \item[Start Above.]
 	The start threshold defines the minimal volume a sound must have to start the
 	recording. It is displayed numerically in the line "Start Above". Note that
 	the unit of the threshold depends on the settings of the peak meter. (i.e.
@@ -189,7 +189,7 @@
 	you record via a digital input as even the noise of the device itself would
 	exceed this threshold immediately.
 	
-  \item[for at least]
+  \item[for at least.]
 	The start duration defines the minimal duration that a signal must exceed the
 	start threshold to start the recording. Depending on your situation you may
 	want to set this setting to 0 (e.g. when copying a song from a commercial
@@ -197,7 +197,7 @@
 	(think of percussion) neglectable dropouts are tolerated during this start
 	duration.
 	
-  \item[Stop Below]
+  \item[Stop Below.]
 	When the sound level drops below the stop threshold the recording is stopped.
 	It is displayed numerically in the line "Stop Below". Just like the start
 	threshold the unit of the stop threshold depends on the settings of the peak
@@ -206,12 +206,12 @@
 	left. The value \setting{Off} turns the stop condition off. With this setting you
 	have to stop the recording manually.
 	
-  \item[for at least]
+  \item[for at least.]
     This time specifies the duration the signal must drop below the stop
 	threshold to stop the recording. By selecting high values you can ensure
 	that, for example, trailing fade-outs are recorded entirely.
 	
-  \item[Presplit Gap]
+  \item[Presplit Gap.]
     When the signal drops below the stop threshold for the time specified by the
 	presplit gap a new recording may be started when the signal raises above the
 	start threshold. Thus the value of the presplit gap should be smaller than
@@ -233,24 +233,24 @@ More information can be found at \wikilink{VolumeTriggeredRecording}.
     The \setting{Automatic Gain Control} has five different presets for
     automatically controlling the gain while recording.
     \begin{description}
-      \item[Safety (clip):]
+      \item[Safety (clip).]
         This preset will lower the gain when the levels get too high (-1dB)
         and will never increase gain.
         
-      \item[Live (slow):]
+      \item[Live (slow).]
         This preset is designed to be used for recording of live shows and has
         quite large headroom for loud parts. It heads for a nominal target peak
         level of -9dB and will slowly increase or decrease gain to reach it.
         
-      \item[DJ-Set (slow):]
+      \item[DJ-Set (slow).]
         This preset heads for a nominal target peak level of -5dB and will
         slowly increase or decrease gain to reach it.
         
-      \item[Medium:]
+      \item[Medium.]
         This preset heads for a nominal target peak level of -6dB and will
         increase or decrease gain to reach it.
 
-      \item[Voice (fast):]
+      \item[Voice (fast).]
         This preset is designed to be used for voice recording and heads for a
         nominal target peak level of -7dB and will quickly increase or
         decrease gain to reach it.
