Updated Hebrew language (fixed position of question marks)
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22972 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/hebrew.lang
+++ b/apps/lang/hebrew.lang
@@ -256,7 +256,7 @@
     *: "Are You Sure?"
   </source>
   <dest>
-    *: "האם את/ה בטוח/ה?"
+    *: "?האם את/ה בטוח/ה"
   </dest>
   <voice>
     *: "האם אתה בטוח?"
@@ -585,7 +585,7 @@
     *: "?ליצור סימניה"
   </dest>
   <voice>
-    *: "?ליצור סימניה"
+    *: "ליצור סימניה?"
   </voice>
 </phrase>
 <phrase>
@@ -4838,10 +4838,10 @@
     *: "Maintain a List of Recent Bookmarks?"
   </source>
   <dest>
-    *: "ליצור רשימה של סימניות אחרונות?"
+    *: "?לתחזק רשימה של סימניות אחרונות"
   </dest>
   <voice>
-    *: "ליצור רשימה של סימניות אחרונות?"
+    *: "לתחזק רשימה של סימניות אחרונות?"
   </voice>
 </phrase>
 <phrase>
@@ -5454,7 +5454,7 @@
   </source>
   <dest>
     *: none
-    radio: "לנקות תחנות קבועות נוכחיות?"
+    radio: "?לנקות תחנות קבועות נוכחיות"
   </dest>
   <voice>
     *: none
@@ -5594,7 +5594,7 @@
   </dest>
   <voice>
     *: none
-    radio: "לא נמצאו הגדרות. האם לסרוק אוטומטית"
+    radio: "לא נמצאו הגדרות. האם לסרוק אוטומטית?"
   </voice>
 </phrase>
 <phrase>
@@ -6813,7 +6813,7 @@
     *: "Recursively?"
   </source>
   <dest>
-    *: "את כל תתי-הספריות?"
+    *: "?את כל תתי-הספריות"
   </dest>
   <voice>
     *: "את כל תתי-הספריות?"
@@ -6841,7 +6841,7 @@
     *: "Erase dynamic playlist?"
   </source>
   <dest>
-    *: "למחוק את רשימת השירים הדינאמית?"
+    *: "?למחוק את רשימת השירים הדינאמית"
   </dest>
   <voice>
     *: "למחוק את רשימת השירים הדינאמית?"
@@ -7044,10 +7044,10 @@
     *: "Clear Time?"
   </source>
   <dest>
-    *: "לאפס זמנים?"
+    *: "?לאפס זמנים"
   </dest>
   <voice>
-    *: "?לאפס זמנים"
+    *: "לאפס זמנים?"
   </voice>
 </phrase>
 <phrase>
