--- a/manual/configure_rockbox/system_options.tex
+++ b/manual/configure_rockbox/system_options.tex
@@ -183,7 +183,7 @@ this option \setting{On}. If it is not required, then turning this setting
   }
 }
 \opt{usb_hid}{
-  \subsection{USB keypad Mode}
+  \subsection{USB Keypad Mode}
     This setting control the keypad mode when the \dap{} is attached to a
     computer through USB. Pressing a key on the \dap{} sends a keystroke the
     computer the \dap{} is attached to, according to the mapping set by the
