Manual entry for the reversi game
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23009 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/main.tex
+++ b/manual/plugins/main.tex
@@ -58,6 +58,8 @@ text files%
 
 \opt{lcd_bitmap}{\input{plugins/pong.tex}}
 
+\opt{lcd_bitmap}{\input{plugins/reversi.tex}}
+
 \opt{lcd_bitmap}{\input{plugins/robotfindskitten.tex}}
 
 {\input{plugins/rockblox.tex}}
